--- a/backlog/config.yml
+++ b/backlog/config.yml
@@ -1,4 +1,4 @@
-project_name: "mindsteep"
+project_name: "bergamot"
 default_status: "To Do"
 statuses: ["To Do", "In Progress", "Done"]
 labels: []
